<!--
	Copyright (C) 2014 TU Darmstadt, Hessen, Germany.
	Department of Computer Science Databases and Distributed Systems

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->
 
<resources>

    <!-- ACRA -->
    <string name="crash_toast_text">Ooooops ! I crashed!</string>
    <string name="crash_notif_ticker_text">Unexpected error, please send a report...</string>
    <string name="crash_notif_title">myHealthHub has crashed...</string>
    <string name="crash_notif_text">Please click here to help fix the issue.</string>
    <string name="crash_dialog_title">myHealthHub has crashed</string>
    <string name="crash_dialog_text">An unexpected error occurred forcing the
    application to stop. Please help us fix this by sending us error data through email</string>
    <string name="crash_dialog_comment_prompt">You might add your comments about the problem below:</string>
    <string name="crash_dialog_ok_toast">Thank you !</string>
    
    <!--  -->
    <string name="app_name">myHealthHub</string>
    <string name="action_settings">Settings</string>
    <string name="title_section_status">Status</string>
    <string name="title_section_event_generator">Event Generator</string>
    <string name="title_section_traffic_generator">Traffic Monitor</string>
    <string name="title_section_sensor_config">Sensor Configuration</string>
    <string name="title_section_internal_sensor">Internal Sensor Config</string>
    <string name="sensor_type">Sensor Type</string>
    <string name="sensor_auto_connect">Enable</string>
    <string name="activate">Connect to</string>
    <string name="select_device">Select a device</string>
    <string name="sensor_name_zephyrhxm">HR: Zephyr HxM</string>
    <string name="sensor_name_polarbleutooth">HR: Polar Bluetooth</string>
    <string name="sensor_name_corscience_ecg">ECG: Corscience 1-lead</string>
    <string name="sensor_name_iem_scale">Scale: IEM</string>
    <string name="sensor_name_boso_bloodpressure">BP: Boso medicus</string>
    <string name="sensor_name_acc_leg">Acc: HedgeHog Ankle/Leg</string>
    <string name="sensor_name_acc_chest">Acc: Porcupine Chest</string>
    <string name="sensor_name_acc_wrist">Acc: HedgeHog Wrist</string>
    <string name="sensor_name_acc_debug">Acc: Hedgehog Debug</string>
    <string name="request_connect">Connect..</string>
    <string name="manual_connect">Passive Connection</string>
    <string name="auto_connect">Active Connection</string>
    <string name="dummy_empty">Keine</string>
    <string name="sensor_name_roving">Ambient: Roving Modules</string>
    <string name="sensor_name_infrawot">Ambient: InfraWoT</string>
    <string name="men_manage_db">Manage Database</string>
    <string name="men_manage_xml">Manage XMLs</string>
    <string name="men_transformation_manager">Transformation Manager</string>
    <string name="men_show_eventgen">Show Event Generator</string>
    <string name="men_preferences">Preferences</string>

    <!-- Personal Profile -->
    <string name="psnal_input">Personal Data</string>
    <string name="p_user_name">Username</string>
    <string name="p_weight">Current Weight</string>
    <string name="p_cri_hr">Critical Heart Rate</string>
    <string name="p_gender">Gender</string>
    <string name="p_age">Age</string>
    <string name="p_emcy_phone_nr">Emergency PhoneNr</string>
    <string name="p_height">Body Height</string>
    <string name="p_height_type">cm</string>
    <string name="p_empty">Not avail</string>
    <string name="p_weight_type">kg</string>
    <string name="p_cri_hr_type">bpm</string>

    <!-- Server URL can be changed if needed! -->
    <string name="send_url">http://benuha.hostoi.com/android_myhealthhub/send_message.php</string>

    <!-- Popup screen -->
    <string name="popup_sys_monitor">
        Idea is that myHealthHub regularly (each 15mins!?) does a battery check and 
        the current GPS Location of the device and sends data to a Server. In case of
        System Failure and the patient is in a critical condition, we can use those to
        check for his last known location.
        </string>
        
   	<string name="popup_sys_traffic_clearing">
   	    Clear all traffic data from device, are you sure?
   	</string>
   	<string name="title_traffic_clearing">Delete Recorded Data</string>
   	<string name="sum_traffic_clearing">Clear all recorded data from device</string>
        
<!--     Sensor Settings -->
	<string name="value_unknown">Unknown</string>
	<string name="title_bluetooth_sensor_type">Sensor Type</string>
	<string name="title_bluetooth_pairing">Bluetooth pairing</string>
	<string name="sum_bluetooth_pairing">Open Android\'s Bluetooth settings to pair a new sensor</string>
	<string name="title_sensor_status">Sensor Status</string>
	<string name="title_bluetooth_sensor_list">Bluetooth-Device</string>
	<string name="sum_bluetooth_sensor_list">List of available BT-Sensor</string>
	

</resources>