<!--
	Copyright (C) 2014 TU Darmstadt, Hessen, Germany.
	Department of Computer Science Databases and Distributed Systems

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->
 
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

        <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <TableLayout
            android:id="@+id/tableLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:stretchColumns="0" >

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/sensor_type"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/sensor_auto_connect"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/activate"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center_vertical" >

                <TextView
                    android:id="@+id/textViewHxM"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sensor_name_zephyrhxm" />

                <ToggleButton
                    android:id="@+id/toggle_autoconnect_hxm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onClickToggleHxM"
                    android:text="ToggleButton" />

                <Button
                    android:id="@+id/button_connect_hxm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onClickConnectHxM"
                    android:text="@string/request_connect" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical" >

                <TextView
                    android:id="@+id/textViewECG"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sensor_name_corscience_ecg" />

                <ToggleButton
                    android:id="@+id/toggle_autoconnect_corscience_ecg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onClickToggleCorscienceECG"
                    android:text="ToggleButton" />

                <Button
                    android:id="@+id/button_connect_corscience_ecg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onClickConnectCorscienceECG"
                    android:text="@string/request_connect" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical" >

                <TextView
                    android:id="@+id/textViewIEMScale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sensor_name_iem_scale" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dummy_empty" />

                <ToggleButton
                    android:id="@+id/toggle_autoconnect_iem_scale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="true"
                    android:onClick="onClickActivateIEMScale"
                    android:text="ToggleButton" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical" >

                <TextView
                    android:id="@+id/textViewBloodPressure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sensor_name_boso_bloodpressure" />

                <TextView
                    android:id="@+id/TextView03"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dummy_empty" />

                <ToggleButton
                    android:id="@+id/toggle_autoconnect_boso_bloodpressure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="true"
                    android:onClick="onClickActivateBosoBP"
                    android:text="ToggleButton" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical" >

                <TextView
                    android:id="@+id/textViewAccLeg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sensor_name_acc_leg" />

                <ToggleButton
                    android:id="@+id/toggle_autoconnect_acc_leg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onClickToggleAccLeg"
                    android:text="ToggleButton" />

                <Button
                    android:id="@+id/button_connect_acc_leg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onClickConnectAccLeg"
                    android:text="@string/request_connect" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical" >

                <TextView
                    android:id="@+id/textViewAccChest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sensor_name_acc_chest" />

                <ToggleButton
                    android:id="@+id/toggle_autoconnect_acc_chest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="ToggleButton" />

                <Button
                    android:id="@+id/button_connect_acc_chest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/request_connect" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical" >

                <TextView
                    android:id="@+id/textViewAccWrist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sensor_name_acc_wrist" />

                <ToggleButton
                    android:id="@+id/toggle_autoconnect_acc_wrist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="ToggleButton" />

                <Button
                    android:id="@+id/button_connect_acc_wrist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/request_connect" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical" >

                <TextView
                    android:id="@+id/textViewRoving"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sensor_name_roving" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dummy_empty" />

                <ToggleButton
                    android:id="@+id/toggle_autoconnect_roving"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onClickActivateRoving"
                    android:text="ToggleButton" />
            </TableRow>

      <TableRow
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical" >

                <TextView
                    android:id="@+id/textViewRoving"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sensor_name_infrawot" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dummy_empty" />

                <ToggleButton
                    android:id="@+id/toggle_autoconnect_infrawot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onClickToggleInfraWOT"
                    android:text="ToggleButton" />
            </TableRow> 
        </TableLayout>
    </LinearLayout>

</ScrollView>